cabal-version:      2.4
name:               Tora
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Takumi Crary
maintainer:         tcrary@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

Test-Suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-extensions: OverloadedStrings
  build-depends: base
                ,Tora
                ,template-haskell
                ,bytestring
                ,HUnit
                ,Tora
library
    build-depends:    base >= 4.13.3.0
                      ,array
                      ,mtl
                      ,bytestring
                      ,HUnit
                      ,extra
                      ,template-haskell
                      ,containers
                      ,monad-gen
                      ,transformers

    hs-source-dirs:   src
    default-extensions: OverloadedStrings
    default-language: Haskell2010
    build-tools-depends: alex:alex, happy:happy
    exposed-modules:
                     Tora.Parser
                    ,Tora.Lexer
                    ,Tora.QQ
                    ,Tora.TypeChecker
                    ,Tora.Test.TypeCheckerTests
                    ,Tora.AST

executable Tora
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                     ,HUnit
                     ,Tora
    hs-source-dirs:   app
    default-language: Haskell2010
